// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NOT_FOUND 1`] = `
Object {
  "location": Object {
    "basename": undefined,
    "url": "/cat",
  },
  "params": Object {
    "foo": "bar",
  },
  "type": "SCENE/@@rudy/NOT_FOUND",
}
`;

exports[`NOT_FOUND 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/cat",
      "search": "",
      "state": Object {},
      "url": "/cat",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 1,
  "kind": "push",
  "length": 2,
  "params": Object {
    "foo": "bar",
  },
  "pathname": "/cat",
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/FIRST",
    "url": "/first",
  },
  "query": Object {},
  "scene": "SCENE",
  "search": "",
  "state": Object {},
  "status": 404,
  "type": "SCENE/@@rudy/NOT_FOUND",
  "url": "/cat",
}
`;

exports[`createScene 1`] = `
Object {
  "FIRST": "SCENE/FIRST",
  "FIRST_COMPLETE": "SCENE/FIRST_COMPLETE",
  "FIRST_ERROR": "SCENE/FIRST_ERROR",
  "FOURTH": "SCENE/FOURTH",
  "FOURTH_COMPLETE": "SCENE/FOURTH_COMPLETE",
  "FOURTH_ERROR": "SCENE/FOURTH_ERROR",
  "NOT_FOUND": "SCENE/@@rudy/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "SCENE/@@rudy/NOT_FOUND_COMPLETE",
  "NOT_FOUND_ERROR": "SCENE/@@rudy/NOT_FOUND_ERROR",
  "PLAIN": "SCENE/PLAIN",
  "PLAIN_COMPLETE": "SCENE/PLAIN_COMPLETE",
  "PLAIN_ERROR": "SCENE/PLAIN_ERROR",
  "SECOND": "SCENE/SECOND",
  "SECOND_COMPLETE": "SCENE/SECOND_COMPLETE",
  "SECOND_ERROR": "SCENE/SECOND_ERROR",
  "THIRD": "SCENE/THIRD",
  "THIRD_COMPLETE": "SCENE/THIRD_COMPLETE",
  "THIRD_ERROR": "SCENE/THIRD_ERROR",
}
`;

exports[`createScene 2`] = `
Object {
  "first": [Function],
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`createScene 3`] = `
"const { types, actions } = createScene(routes, { scene: 'SCENE' })

const { 
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
} = types

const { 
	first,
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
}

export {
	first,
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;

exports[`double createScene 1`] = `
Object {
  "FIRST": "double/scene/FIRST",
  "FIRST_COMPLETE": "double/scene/FIRST_COMPLETE",
  "FIRST_ERROR": "double/scene/FIRST_ERROR",
  "FOURTH": "double/scene/FOURTH",
  "FOURTH_COMPLETE": "double/scene/FOURTH_COMPLETE",
  "FOURTH_ERROR": "double/scene/FOURTH_ERROR",
  "NOT_FOUND": "double/scene/@@rudy/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "double/scene/@@rudy/NOT_FOUND_COMPLETE",
  "NOT_FOUND_ERROR": "double/scene/@@rudy/NOT_FOUND_ERROR",
  "PLAIN": "double/scene/PLAIN",
  "PLAIN_COMPLETE": "double/scene/PLAIN_COMPLETE",
  "PLAIN_ERROR": "double/scene/PLAIN_ERROR",
  "SECOND": "double/scene/SECOND",
  "SECOND_COMPLETE": "double/scene/SECOND_COMPLETE",
  "SECOND_ERROR": "double/scene/SECOND_ERROR",
  "THIRD": "double/scene/THIRD",
  "THIRD_COMPLETE": "double/scene/THIRD_COMPLETE",
  "THIRD_ERROR": "double/scene/THIRD_ERROR",
}
`;

exports[`double createScene 2`] = `
Object {
  "first": [Function],
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`double createScene 3`] = `
Object {
  "@@rudy/NOT_FOUND": Object {
    "path": "/not-found",
    "type": "@@rudy/NOT_FOUND",
  },
  "double/scene/@@rudy/NOT_FOUND": Object {
    "path": "/not-found-foo",
    "scene": "double/scene",
    "type": "double/scene/@@rudy/NOT_FOUND",
  },
  "double/scene/FIRST": Object {
    "path": "/first",
    "scene": "double/scene",
    "type": "double/scene/FIRST",
  },
  "double/scene/FOURTH": Object {
    "action": [Function],
    "onComplete": [Function],
    "path": "/fourth",
    "scene": "double/scene",
    "thunk": [Function],
    "type": "double/scene/FOURTH",
  },
  "double/scene/PLAIN": Object {
    "action": [Function],
    "scene": "double/scene",
    "type": "double/scene/PLAIN",
  },
  "double/scene/SECOND": Object {
    "error": [Function],
    "path": "/second",
    "scene": "double/scene",
    "type": "double/scene/SECOND",
  },
  "double/scene/THIRD": Object {
    "action": Array [
      "",
      "customCreator",
    ],
    "customCreator": [Function],
    "path": "/third",
    "scene": "double/scene",
    "thunk": [Function],
    "type": "double/scene/THIRD",
  },
}
`;

exports[`double createScene 4`] = `
"const { types, actions } = createScene(routes, { scene: 'double/scene' })

const { 
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
} = types

const { 
	first,
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	FIRST,
	FIRST_COMPLETE,
	FIRST_ERROR,
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR
}

export {
	first,
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;
